[package]
name = "facefinder"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
anyhow = "1.0.68"
ureq = { version = "2.6.2", features = ["json", "socks-proxy"] }
clap = { version = "4.1.1", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde-aux = "4.1.2"